allow user set pw for account